--- a/server.toml
+++ b/server.toml
@@ -1,21 +1,8 @@
-name = 'alt:V Server'
+name = 'alt:V'
 port = 7788
-players = 128
-# password = 'ultra-password'
-announce = false
-# token = 'YOUR_TOKEN'
-gamemode = 'Freeroam'
-website = 'example.com'
+players = 1488
 language = 'en'
-description = 'alt:V Sample Server'
 modules = ['js-module']
-resources = [
-    "client",
-    "server",
-    "altv-os-freecam-master",
-    "altv-dev-tools",
-    "altv-os-nametags"
-]
 debug = true
-spawnAfterConnect = false
 sendPlayerNames = true
+resources = ["core"]
