--- a/packages/core/resource.toml
+++ b/packages/core/resource.toml
@@ -1,5 +1,5 @@
 type = "js"
 main = "server/index.js"
 client-main = "client/index.js"
-client-files = ["client/*", "webview/*"]
+client-files = ["client/*"]
 deps = ["altv-data"]
