feat: added docker compose for postgresql; feat: added db package with typeorm setup with first init migration; feat: db wont load on server startup crashing server with 3221225477 exit code; chore: need to figure out why

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
-    "altv-data": "workspace:^"
+    "altv-data": "workspace:^",
+    "db": "workspace:^"
   },
   "devDependencies": {
     "@altv/types-client": "^16.6.0",
