--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "run-p run:webview run:altv-server",
     "update-altv": "altv-pkg release",
     "copy-tomls": "node ./scripts/copy-tomls.js",
+    "copy": "run-s copy-tomls",
     "run:webview": "pnpm --filter @res/webview run dev",
     "run:altv-server": "pnpm exec altv-server.exe",
-    "build": "turbo build --filter @res/* && pnpm copy-tomls",
-    "build:force": "turbo build --force --filter @res/* && pnpm copy-tomls"
+    "build": "turbo build --filter @res/* && pnpm copy",
+    "build:force": "turbo build --force --filter @res/* && pnpm copy"
   },
   "packageManager": "pnpm@10.13.1",
   "license": "ISC",
   "devDependencies": {
+    "@swc/core": "^1.13.5",
     "@types/node": "^24.3.0",
     "altv-pkg": "^2.16.0",
     "cross-env": "^10.0.0",
@@ -21,6 +23,9 @@
     "turbo": "^2.5.6"
   },
   "dependencies": {
-    "npm-run-all2": "^8.0.4"
+    "npm-run-all2": "^8.0.4",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.26"
   }
 }
