--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "turbo": "^2.5.6"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
     "kysely": "^0.28.5",
     "npm-run-all2": "^8.0.4",
     "pg": "^8.16.3",
